[package]
name = "floorplanning"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Haag"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
draw = "0.2.6"
clap = { version = "4.4.12", features = ["derive"] }

[profile.release]
debug = true